# django-cookiecutter-glenjarvis

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/django_website/{{cookiecutter.project_slug}}/: env_example  settings.py
