[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license}}"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-bootstrap4 = "^2.3.1"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
sitemap = "^20191121"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
